# Civilization

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  OPTIMIZATION_REPORT.md  PROJECT_DOCS.md  README.md  README_CN.md  README_en.md  advanced_evolution.py  bash.txt  benchmark_performance.py  civilization_evolution.csv  civilization_visualizer.py  demo_advanced_evolution.py  demo_new_features.py  demo_simulation.py  evolution_report.txt  example_config.py  gui_prototype.py  interactive_demo.py  multi_agent_simulation.py  mypy.ini  optimization_demo.py  pyproject.toml  random_events.py  requirements-dev.txt  requirements.txt  run_demo.py  run_simulation.bat  setup.cfg  simulation_cli.py  simulation_config.py  strategy_history.json  summary_report.txt  tech_tree.py  test_civilization_data.csv  test_new_features.py  test_simulation_results.npz  test_system.py  (+9 more)
civsim/: __init__.py  animation.py  config.py  constants.py  events.py  evolution.py  logger.py  multi_agent.py  optimizations.py  optimized_multi_agent.py  performance.py  relationship_manager.py  simulation.py  strategy.py  strategy_executor.py  technology.py  utils.py  validation.py
docs/: index.html
docs/wiki/: API-Reference.md  Configuration.md  Contributing.md  FAQ.md  Getting-Started.md  Home.md
results/: 多智能体演化历史.npz
test_results/: test_attribute_history.csv  test_report.txt  test_result.npz  test_strategy_data.csv  test_technology_data.csv  test_technology_data.json
